// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PeselField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="id_code"
      >
        Pesel
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="testId"
        label="Pesel"
        name="id_code"
        placeholder="Pesel"
        value="2312"
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        Podany PESEL jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<PeselField/> matches snapshot 1`] = `
<input
  class="sc-iqAbSa jrHUfY"
  id="testId"
  label="Pesel"
  name="id_code"
  placeholder="Pesel"
  value=""
/>
`;

exports[`<PeselField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="id_code"
      >
        Pesel*
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="testId"
        label="Pesel"
        name="id_code"
        placeholder="Pesel*"
        required=""
        value=""
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<PeselField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="id_code"
      >
        Pesel
      </label>
      <input
        class="sc-iqAbSa jrHUfY"
        id="testId"
        label="Pesel"
        name="id_code"
        placeholder="Pesel"
        value=""
      />
    </div>
  </form>
</div>
`;
